render time fields

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="app"></div>
 <!--
-  <header id="quote" class="quote-section">
+  <header class="quote-section">
   <div class="quote__text"> Quote goes here </div>
   <div class="quote__author">Author goes here </div>
 </header>
