--- a/src/index.html
+++ b/src/index.html
@@ -3,50 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <!-- GOOGLE FONTS - INTER -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
   <title>Dashboard Clock</title>
 </head>
 
 <body>
 <div id="app"></div>
-<!--
-  <header class="quote-section">
-  <div class="quote__text"> Quote goes here </div>
-  <div class="quote__author">Author goes here </div>
-</header>
-<main>
-  <section class="weather-section">
-    <div class="weather__current">
-      <p> Sunny, where, it's currently </p></div>
-    <div class="weather__hour"><p> 12:30 utc</p></div>
-    <div class="weather__location"><p>in London, UK.</p></div>
-  </section>
 
-  <button id="btn-more" class="btn">More</button>
-</main>
-<section class="hidden" id="more__info">
-  <div class="time-year">
-    <div class="timezone">
-      <p>Current timezone</p>
-      <p>Europe/London</p>
-    </div>
-    <div class="year-days">
-      <p>Day of the year</p>
-      <p>295</p>
-    </div>
-  </div>
-  <div>
-    <div>
-      <p>Day of the week</p>
-      <p>5</p>
-    </div>
-    <div>
-      <p>Week number</p>
-      <p>42</p>
-    </div>
-  </div>
-</section>
--->
 <script type="module" src="main.js"></script>
 </body>
 </html>
