--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
   <!-- GOOGLE FONTS - INTER -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;700&display=swap" rel="stylesheet">
   <title>Dashboard Clock</title>
 </head>
 
